# evaldata

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  backlog.md  conftest.py  docker-compose.yml  justfile  mkdocs.yml  mvp-review.md  pyproject.toml
.changes/: 0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.9.0.md
.changes/unreleased/: Added-20260706-105237.yaml  Added-20260708-065740.yaml  Added-20260708-100002.yaml  Added-20260713-091055.yaml  Added-20260719-202541.yaml  Added-20260719-202542.yaml  Changed-20260708-100000.yaml  Changed-20260708-100001.yaml  Changed-20260721-210000.yaml  Fixed-20260719-202543.yaml
.github/workflows/: ci.yml  cortex-live.yml
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/concepts/: index.html
0.4/getting-started/: index.html
0.4/guides/benchmarks/: index.html
0.4/guides/databricks/: index.html
0.4/guides/dbt/: index.html
0.4/guides/dbt-semantic-layer/: index.html
0.4/guides/dbt-semantic-layer-benchmark/: index.html
0.4/guides/hosted-model/: index.html
0.4/guides/llm-judge/: index.html
0.4/guides/local-ollama/: index.html
0.4/guides/semantic-equivalence/: index.html
0.4/reference/: index.html
0.4/reference/dbt/: index.html
0.4/reference/equivalence/: index.html
0.4/search/: search_index.json
0.5/: 404.html  index.html  objects.inv  sitemap.xml
0.5/concepts/: index.html
0.5/getting-started/: index.html
0.5/reference/: index.html
0.5/search/: search_index.json
0.5/stylesheets/: extra.css
0.6/: 404.html  index.html  objects.inv  sitemap.xml
0.6/concepts/: index.html
0.6/getting-started/: index.html
0.6/reference/: index.html
0.6/search/: search_index.json
0.6/support-policy/: index.html
0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.7/concepts/: index.html
0.7/getting-started/: index.html
0.7/reference/: index.html
0.7/search/: search_index.json
0.7/support-policy/: index.html
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.8/concepts/: index.html
0.8/getting-started/: index.html
0.8/reference/: index.html
0.8/search/: search_index.json
0.8/support-policy/: index.html
0.9/: 404.html  index.html  objects.inv  sitemap.xml
0.9/concepts/: index.html
0.9/getting-started/: index.html
0.9/reference/: index.html
0.9/search/: search_index.json
0.9/support-policy/: index.html
docs/: concepts.md  getting-started.md  index.md  support-policy.md
docs/guides/: benchmarks.md  bigquery.md  composing-scorers.md  cortex.md  databricks.md  dbt-semantic-layer-benchmark.md  dbt-semantic-layer.md  dbt.md  hosted-model.md  llm-judge.md  local-ollama.md  pydantic-evals.md  semantic-equivalence.md  snowflake.md
docs/reference/: cortex.md  dbt.md  platforms.md  pydantic-evals.md
examples/: README.md  __init__.py
examples/01_deterministic/: test_golden_questions.py  test_semantic_equivalence.py
examples/02_local_ai/: test_text_to_sql.py
examples/03_hosted_ai/: conftest.py  test_text_to_sql.py
examples/04_databricks/: __init__.py  test_deterministic.py
examples/05_llm_judge/: test_judged_equivalence.py
examples/07_snowflake/: __init__.py  test_deterministic.py
examples/08_cortex/: __init__.py  test_cortex_analyst.py
examples/09_bigquery/: __init__.py  test_deterministic.py
examples/10_dbt/: __init__.py  cases.yml  metric_cases.yml  test_semantic_layer.py  test_text_to_sql.py
examples/11_pydantic_evals/: __init__.py  test_sql_equivalence.py
scripts/: scan_cassettes.py
src/data_eval/: cli.py  types.py
src/dataeval/: __init__.py  cli.py  types.py
src/evaldata/: __init__.py  cli.py  types.py
tests/: conftest.py  test_acceptance.py  test_equivalence.py  test_public_api.py  test_smoke.py  test_types.py
tests/_vendor/: spider_exec_eval.py
tests/benchmarks/: test_full_dev_parity.py
tests/cli/: test_cli.py
tests/core/: test_benchmark.py  test_runner.py
tests/cortex/: conftest.py  test_client.py  test_cortex_benchmark.py  test_cortex_live.py  test_solver.py  test_solver_vcr.py
tests/dbt/: test_acme_bench_corpus.py  test_acme_bench_e2e.py  test_context.py  test_dbt_e2e.py  test_loader.py  test_metric_eval.py  test_metric_layer_judge.py  test_metric_layer_solver.py  test_metric_result_equivalence.py  test_metric_spec_equivalence.py  test_metricflow_run.py  test_profile.py  test_semantic_layer.py  test_sl_bench_corpus.py  test_sl_bench_e2e.py  test_sl_e2e.py
tests/equivalence/: test_rows.py
tests/loaders/: test_fetch.py  test_python.py
tests/pydantic_evals/: test_evaluator.py
tests/pytest_plugin/: test_plugin.py
tests/reporting/: test_collector.py  test_terminal.py
tests/scorers/: test_combinators.py  test_execution_accuracy.py  test_expectation_suite.py  test_judge_equivalence.py  test_llm_judge.py  test_official_parity.py  test_parity_fuzz.py  test_query_runner.py  test_result_set_equivalence.py  test_semantic_equivalence.py  test_sql.py
tests/solvers/: test_callable.py  test_prompt_solver.py
(+299 files in other folders)
